feat: veto de gênero, catálogo sem filmes vazios e invalidação de cache
Quatro defeitos encontrados na revisão do código inteiro.

1. Nenhum @CacheEvict existia. Os três caches do catálogo (movies,
   movieById, featuredMovie) eram populados e nunca invalidados: o job de
   enriquecimento gravava título pt-BR, pôster, sinopse e trailer, e a API
   continuava servindo a versão anterior até o TTL de 10 min vencer.
   MovieCacheEvictor é um componente separado de propósito — @CacheEvict
   chamado de dentro da própria classe é ignorado em silêncio pelo proxy.

2. `disliked` era descartado. O app sempre enviou o campo e o backend só
   lia `liked`; quem excluía Terror continuava recebendo Terror. Agora vai
   para app_user_genres_excluded (V12) e vira veto nas duas trilhas de
   recomendação — inclusive na do motor, que não sabe o que foi rejeitado.

3. Filmes sem tradução pt-BR ou sem elenco saem das listas. O catálogo é
   internacional e esses títulos viravam card com nome estrangeiro, sinopse
   em branco e avatares vazios. A coluna movie.displayable (V12) guarda o
   veredito do enriquecimento; basta faltar um dos dois para sumir de
   listagem, busca e destaque. Continua abrindo por link direto, para não
   quebrar watchlist e avaliações já existentes.
   De quebra: cast_list vazio virava [""], um avatar sem nome na tela.

4. Trocar de e-mail não encerrava a sessão. O access token carrega o e-mail
   nas claims e o JwtAuthFilter monta o principal sem ir ao banco, então o
   principal mentia até o token vencer. Agora revoga os refresh tokens.

116 testes no backend (12 novos), 32 no app, typecheck limpo.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>